objects/RPS_Account__x.object
<CustomObject>
    <fields>
        <fullName>PersonMailingStreet__c</fullName>
        <externalDeveloperName>PersonMailingStreet</externalDeveloperName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PersonMobilePhone__c</fullName>
        <externalDeveloperName>PersonMobilePhone</externalDeveloperName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonOtherAddress__c</fullName>
        <externalDeveloperName>PersonOtherAddress</externalDeveloperName>
        <label>Other Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PersonOtherCity__c</fullName>
        <externalDeveloperName>PersonOtherCity</externalDeveloperName>
        <label>Other City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonOtherCountryCode__c</fullName>
        <externalDeveloperName>PersonOtherCountryCode</externalDeveloperName>
        <label>Other Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>Bhutan</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>Bolivia, Plurinational State of</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>Bonaire, Sint Eustatius and Saba</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>Botswana</label>
                </value>
                <value>
                    <fullName>BV</fullName>
                    <label>Bouvet Island</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonOtherCountry__c</fullName>
        <externalDeveloperName>PersonOtherCountry</externalDeveloperName>
        <label>Other Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonOtherGeocodeAccuracy__c</fullName>
        <externalDeveloperName>PersonOtherGeocodeAccuracy</externalDeveloperName>
        <label>Other Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonOtherLatitude__c</fullName>
        <externalDeveloperName>PersonOtherLatitude</externalDeveloperName>
        <label>Other Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PersonOtherLongitude__c</fullName>
        <externalDeveloperName>PersonOtherLongitude</externalDeveloperName>
        <label>Other Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PersonOtherPhone__c</fullName>
        <externalDeveloperName>PersonOtherPhone</externalDeveloperName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonOtherPostalCode__c</fullName>
        <externalDeveloperName>PersonOtherPostalCode</externalDeveloperName>
        <label>Other Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonOtherState__c</fullName>
        <externalDeveloperName>PersonOtherState</externalDeveloperName>
        <label>Other State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonOtherStreet__c</fullName>
        <externalDeveloperName>PersonOtherStreet</externalDeveloperName>
        <label>Other Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PersonTitle__c</fullName>
        <externalDeveloperName>PersonTitle</externalDeveloperName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <externalDeveloperName>Phone</externalDeveloperName>
        <inlineHelpText>Phone numbers are a great way to call people on phones.  Phones are what we call our pocket computers even though we use them for games, selfies, and facebook.</inlineHelpText>
        <label>Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <externalDeveloperName>PhotoUrl</externalDeveloperName>
        <label>Photo URL</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RPS_316_Solution_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_316_Solution__c</externalDeveloperName>
        <label>316 Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_403B_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_403B__pc</externalDeveloperName>
        <label>403B?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_4_Digit_Parts_Client_Code_c__c</fullName>
        <externalDeveloperName>RPS_4_Digit_Parts_Client_Code__c</externalDeveloperName>
        <inlineHelpText>A field in P+ representing the unique identifier for a plan sponsor&apos;s plan with TRS/Ent. This is also the first 4 alphanumerics of a plan code.  i.e. AN07</inlineHelpText>
        <label>P+ Client ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_AUA_As_Of_Date_for_Advisor_pc__c</fullName>
        <externalDeveloperName>RPS_AUA_As_Of_Date_for_Advisor__pc</externalDeveloperName>
        <label>AUA As Of Date for Advisor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_AUA_for_Advisor_pc__c</fullName>
        <externalDeveloperName>RPS_AUA_for_Advisor__pc</externalDeveloperName>
        <label>AUA for Advisor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$1.5B to $2B&lt;</fullName>
                </value>
                <value>
                    <fullName>$1B to $1.5B&lt;</fullName>
                </value>
                <value>
                    <fullName>$2.5 to $3B&lt;</fullName>
                </value>
                <value>
                    <fullName>$2B to $2.5B&lt;</fullName>
                </value>
                <value>
                    <fullName>$3B to $5B&lt;</fullName>
                </value>
                <value>
                    <fullName>$200MM to $350MM</fullName>
                </value>
                <value>
                    <fullName>$350MM to $900MM&lt;</fullName>
                </value>
                <value>
                    <fullName>$750MM to $900MM&lt;</fullName>
                </value>
                <value>
                    <fullName>$900MM to $1B&lt;</fullName>
                </value>
                <value>
                    <fullName>More than $5B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_AUA_for_Firm_c__c</fullName>
        <externalDeveloperName>RPS_AUA_for_Firm__c</externalDeveloperName>
        <label>AUA for Firm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$1.5B to $2B&lt;</fullName>
                </value>
                <value>
                    <fullName>$1B to $1.5B&lt;</fullName>
                </value>
                <value>
                    <fullName>$2.5 to $3B&lt;</fullName>
                </value>
                <value>
                    <fullName>$2B to $2.5B&lt;</fullName>
                </value>
                <value>
                    <fullName>$3B to $5B&lt;</fullName>
                </value>
                <value>
                    <fullName>$750MM to $900MM&lt;</fullName>
                </value>
                <value>
                    <fullName>$900MM to $1B&lt;</fullName>
                </value>
                <value>
                    <fullName>More than $5B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Ability_to_Interpret_Complex_Issues__c</fullName>
        <externalDeveloperName>RPS_Ability_to_Interpret_Complex_Issues__pc</externalDeveloperName>
        <label>Ability to Interpret Complex Issues</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Accesses_ACH_Accounts_c__c</fullName>
        <externalDeveloperName>RPS_Accesses_ACH_Accounts__c</externalDeveloperName>
        <inlineHelpText>This field is only editable if Sends Contributions = Always</inlineHelpText>
        <label>Accesses ACH Accounts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Sometimes</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Account_Roles_c__c</fullName>
        <externalDeveloperName>RPS_Account_Roles__c</externalDeveloperName>
        <label>Account Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Active_BD_CreateDateTime_c__c</fullName>
        <externalDeveloperName>RPS_Active_BD_CreateDateTime__c</externalDeveloperName>
        <label>Active BD CreateDateTime</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RPS_Active_BD_LastModifiedDateTime_c__c</fullName>
        <externalDeveloperName>RPS_Active_BD_LastModifiedDateTime__c</externalDeveloperName>
        <label>Active BD LastModifiedDateTime</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RPS_Advisor_Designation_Notes_pc__c</fullName>
        <externalDeveloperName>RPS_Advisor_Designation_Notes__pc</externalDeveloperName>
        <label>Advisor Designation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Advisor_Profile_Complete_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Advisor_Profile_Complete__pc</externalDeveloperName>
        <label>Advisor Profile Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Advisor_Rating_pc__c</fullName>
        <externalDeveloperName>RPS_Advisor_Rating__pc</externalDeveloperName>
        <label>MM Advisor Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Advisor_Risk_Rating_pc__c</fullName>
        <externalDeveloperName>RPS_Advisor_Risk_Rating__pc</externalDeveloperName>
        <label>Advisor Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Advisor_Value_Proposition_pc__c</fullName>
        <externalDeveloperName>RPS_Advisor_Value_Proposition__pc</externalDeveloperName>
        <label>Advisor Value Proposition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Asset_Based_Commission_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Asset_Based_Commission__c</externalDeveloperName>
        <label>Asset Based Commission Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Asset_Value_As_Of_Date_c__c</fullName>
        <externalDeveloperName>RPS_Asset_Value_As_Of_Date__c</externalDeveloperName>
        <label>Asset Value As Of Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Assets_MM_c__c</fullName>
        <externalDeveloperName>RPS_Assets_MM__c</externalDeveloperName>
        <label>Assets ($MM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Assistant_Email_pc__c</fullName>
        <externalDeveloperName>RPS_Assistant_Email__pc</externalDeveloperName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RPS_Average_Plan_Size_pc__c</fullName>
        <externalDeveloperName>RPS_Average_Plan_Size__pc</externalDeveloperName>
        <label>Average Plan Size</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Beneficiary_Designation_c__c</fullName>
        <externalDeveloperName>RPS_Beneficiary_Designation__c</externalDeveloperName>
        <label>Beneficiary Designation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Billing_Zip_Code_c__c</fullName>
        <externalDeveloperName>RPS_Billing_Zip_Code__c</externalDeveloperName>
        <label>Billing Zip Code</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Blackout_Notices_c__c</fullName>
        <externalDeveloperName>RPS_Blackout_Notices__c</externalDeveloperName>
        <label>Blackout Notices</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JH Template</fullName>
                </value>
                <value>
                    <fullName>TPA Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Blackout_Period_c__c</fullName>
        <externalDeveloperName>RPS_Blackout_Period__c</externalDeveloperName>
        <label>Blackout Period</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Blue_Dot_Indicator_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Blue_Dot_Indicator__pc</externalDeveloperName>
        <label>Blue Dot Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Blue_Dot_pc__c</fullName>
        <externalDeveloperName>RPS_Blue_Dot__pc</externalDeveloperName>
        <label>Blue Dot</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Boundary_for_Commission_Lower_c__c</fullName>
        <externalDeveloperName>RPS_Boundary_for_Commission_Lower__c</externalDeveloperName>
        <label>Boundary for Commission Lower</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Boundary_for_Commission_Upper_c__c</fullName>
        <externalDeveloperName>RPS_Boundary_for_Commission_Upper__c</externalDeveloperName>
        <label>Boundary for Commission Upper</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Boundary_for_RIA_Fee_Lower_c__c</fullName>
        <externalDeveloperName>RPS_Boundary_for_RIA_Fee_Lower__c</externalDeveloperName>
        <label>Boundary for RIA Fee Lower</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Boundary_for_RIA_Fee_Upper_c__c</fullName>
        <externalDeveloperName>RPS_Boundary_for_RIA_Fee_Upper__c</externalDeveloperName>
        <label>Boundary for RIA Fee Upper</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Broker_Plan_ID_Code_Required_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Broker_Plan_ID_Code_Required__c</externalDeveloperName>
        <inlineHelpText>If checked off, the firm requires a Broker Plan ID Code present on the contract in Apollo so the advisor can receive compensation</inlineHelpText>
        <label>Broker Plan ID Code Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Broker_Plan_ID_Email_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Broker_Plan_ID_Email__c</externalDeveloperName>
        <label>Broker Plan ID Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_CRD_Number_pc__c</fullName>
        <externalDeveloperName>RPS_CRD_Number__pc</externalDeveloperName>
        <label>CRD Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_CRM_Software_c__c</fullName>
        <externalDeveloperName>RPS_CRM_Software__c</externalDeveloperName>
        <label>CRM Software</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Calculated_by_JH_c__c</fullName>
        <externalDeveloperName>RPS_Calculated_by_JH__c</externalDeveloperName>
        <inlineHelpText>This field is only editable if Vesting Statements = Uses JH Statements</inlineHelpText>
        <label>Calculated by JH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Sometimes</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Calculates_Eligibility_c__c</fullName>
        <externalDeveloperName>RPS_Calculates_Eligibility__c</externalDeveloperName>
        <label>Calculates Eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Sometimes</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Call_Communication_Method_c__c</fullName>
        <externalDeveloperName>RPS_Call_Communication_Method__c</externalDeveloperName>
        <label>Call Communication Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Conference Call</fullName>
                </value>
                <value>
                    <fullName>Service Feature Call</fullName>
                </value>
                <value>
                    <fullName>Welcome Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Certifications_and_Designations_pc__c</fullName>
        <externalDeveloperName>RPS_Certifications_and_Designations__pc</externalDeveloperName>
        <label>Certifications and Designations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Client_Anniversary_Date_pc__c</fullName>
        <externalDeveloperName>RPS_Client_Anniversary_Date__pc</externalDeveloperName>
        <label>Client Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Client_Assets_c__c</fullName>
        <externalDeveloperName>RPS_Client_Assets__c</externalDeveloperName>
        <label>Client Assets</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Client_ID_c__c</fullName>
        <externalDeveloperName>RPS_Client_ID__c</externalDeveloperName>
        <label>Client ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Client_Net_Revenue_c__c</fullName>
        <externalDeveloperName>RPS_Client_Net_Revenue__c</externalDeveloperName>
        <label>Client Net Revenue</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Client_Short_Name_c__c</fullName>
        <externalDeveloperName>RPS_Client_Short_Name__c</externalDeveloperName>
        <label>Client Short Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Co_Mingling_c__c</fullName>
        <externalDeveloperName>RPS_Co_Mingling__c</externalDeveloperName>
        <label>Co-Mingling</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Comm_Based_Only_On_Transfer_Assets_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Comm_Based_Only_On_Transfer_Assets__c</externalDeveloperName>
        <label>Commission Based Only On Transfer Assets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Commission_Grid_Available_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Commission_Grid_Available__c</externalDeveloperName>
        <label>Commission Grid Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Commissions_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Commissions__c</externalDeveloperName>
        <label>Commissions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Communication_Method_c__c</fullName>
        <externalDeveloperName>RPS_Communication_Method__c</externalDeveloperName>
        <label>Communication Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Comp_either_by_Commission_or_RIA_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Comp_either_by_Commission_or_RIA__c</externalDeveloperName>
        <label>Comp either by Commission or RIA only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Company_Email_Address_c__c</fullName>
        <externalDeveloperName>RPS_Company_Email_Address__c</externalDeveloperName>
        <label>Company Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RPS_Company_ID_c__c</fullName>
        <externalDeveloperName>RPS_Company_ID__c</externalDeveloperName>
        <label>Company ID</label>
        <length>30</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Compensation_Restrictions_c__c</fullName>
        <externalDeveloperName>RPS_Compensation_Restrictions__c</externalDeveloperName>
        <label>Compensation Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Compensation_Types_pc__c</fullName>
        <externalDeveloperName>RPS_Compensation_Types__pc</externalDeveloperName>
        <label>Compensation Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Dollar Fee</fullName>
                </value>
                <value>
                    <fullName>Asset-Based Fee</fullName>
                </value>
                <value>
                    <fullName>Commissions</fullName>
                </value>
                <value>
                    <fullName>Both Fee and 12(b)1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Conducted_Investment_Review_c__c</fullName>
        <externalDeveloperName>RPS_Conducted_Investment_Review__c</externalDeveloperName>
        <label>RPS Conducted Investment Review</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Contact_Frequency_Preference_pc__c</fullName>
        <externalDeveloperName>RPS_Contact_Frequency_Preference__pc</externalDeveloperName>
        <inlineHelpText>How often should we contact you?</inlineHelpText>
        <label>Contact Frequency Preference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Contact_Preference_pc__c</fullName>
        <externalDeveloperName>RPS_Contact_Preference__pc</externalDeveloperName>
        <inlineHelpText>How do you like to be contacted?</inlineHelpText>
        <label>Contact Preference</label>
        <type>TextArea</type>
    </fields>
</CustomObject>